# codemao-sdk-for-python

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  PROJECT_SUMMARY.md  README.md  README_zh.md  SECURITY.md  codemao.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api-reference.md  api_reference.md  development.md  error-handling.md  examples.md  index.md  quickstart.md  user-guide.md
examples/: advanced_examples.py  basic_examples.py  quick_start.py
src/codemaokit/: __init__.py  client.py  exceptions.py  models.py  utils.py
src/pycodemao/: __init__.py  _version.py  client.py
src/pycodemao/exceptions/: __init__.py
src/pycodemao/models/: __init__.py
src/pycodemao/utils/: __init__.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_utils.py
tests/integration/: test_client_integration.py
tests/unit/: test_client.py  test_exceptions.py  test_models.py
